--- a/P1/css/style.css
+++ b/P1/css/style.css
@@ -214,7 +214,8 @@ div.tab button.active {
     text-align: center;
     font-weight: 300;
 }
-/* Reajuste delos campos del formulario*/
+
+/* Reajuste de los campos del formulario*/
 .reaj1{
 	width: 100%;
 }
@@ -225,6 +226,57 @@ div.tab button.active {
 .r1{	
 	display: inline-block; width: auto;  /* 50% */
 }
+
+/******************
+/** Cabecera página RESULTADOS
+/**********/
+
+.cabRes{ /*  banner principal con datos resultado*/
+	height:40%; /* 100px */
+	background-color:#001625;
+}
+	.cabRes h2{
+		text-align:left;
+		padding-left:15%;
+		padding-top:3%; /* 40px*/
+		color:#FFF;
+	}
+		.cabRes p{
+		text-align:left;
+		padding-left:15%;
+		padding-top:2%; /* 40px*/
+		padding-bottom:2%;
+		color:#FFF;
+		size:10px;
+	}
+	
+/** Contenido página resultados */
+.contRes{
+	width:85%;
+	padding-left:15%;
+	/*height:80%;*/
+	background-color:#FFF;
+	float:left;
+	padding-bottom:2%;
+}
+
+
+.cImg{
+	width:235px;
+	height:209px;
+	margin-top:2%;
+	float: left;
+}
+
+.cDatos{
+	width:50%;
+	margin-top:2%;
+	text-align:left;
+	padding-left:1%;
+	background-color:#FFF;
+	float:left;
+}
+
 
 /***********ORDENADOR**************/
 /************ 
@@ -464,6 +516,29 @@ nav {
 }
 
 @media (max-width: 768px) { /* móvil */
+.cabRes{ /*  banner principal con datos resultado*/
+	height:80%;
+	background-color:#001625;
+}
+
+	.cabRes h2{
+		text-align:left;
+		padding-left:15%;
+		padding-top:4%; /* 40px*/
+		color:#FFF;
+	}
+		.cabRes p{
+		text-align:left;
+		padding-left:15%;
+		padding-top:3%; /* 40px*/
+		color:#FFF;
+		size:10px;
+	}
+
+
+
+
+
 .formReg{
 	background-color:lightblue;
 	float:left;
@@ -721,6 +796,7 @@ h2 {
     text-align: center;
     font-weight: 10;
 }
+
 .colum2 p{
 	font-size: 1em;
     line-height: 1.3em;
@@ -765,7 +841,8 @@ h2 {
 }	
 .formLog{
 	margin:0 1% 5% 15%;
-	text-align:left; 
+	text-align:left;
+	color:#333; 
 }
 .bLog{ /* Registro*/
  	width: 150px;
