--- a/P1/css/style.css
+++ b/P1/css/style.css
@@ -168,6 +168,26 @@ div.tab button.active {
     border: 1px solid #ccc;
     border-top: none;
 } 
+.tabcontent p{
+	padding-left:10%;
+	text-align:left;
+}
+.tabcontent a{
+	float:inherit;
+	margin-right:10%;
+	padding: 7px 10px  7px  10px ;
+	text-align:center;
+	line-height:2em;
+	width:auto;
+	color:white; 
+	background-color:#007096;
+	font-family: Arial, Helvetica, sans-serif;
+	border:0; 
+	text-decoration:underline;
+	border-radius: 4px;
+	height:auto;
+}
+
 
 
 
