--- a/Viaggio/WebContent/css/style.css
+++ b/Viaggio/WebContent/css/style.css
@@ -66,7 +66,9 @@ img {
 .column-right{ float: right; width: 33%; }
 .column-center{ display: inline-block; width: 33%; }
 
-/* Formulario Registro*/
+/*******************************/
+/***** Formulario Registro*****/
+/*****************************/
 .formReg{ /* Cajita azul */
 	background-color:lightblue;
 	float:left;
@@ -104,7 +106,6 @@ img {
 	font-family: Arial, Helvetica, sans-serif;
 	border:0; 
 	text-decoration:underline;
-	
 }
 .bIn{ /* index */
 	width: 88px;
@@ -115,10 +116,10 @@ img {
  	width: 200px;
 	height: 25px;
 }
+
 /* User*/
 .contUser{ /* contenedor general */
 	width:100%;
-	/*height: 50%;*/
 	padding: 40px 0;
 	background-color:#e6e6e6;
 	text-align:center;
@@ -127,10 +128,10 @@ img {
     background: #001625;
     color: white;
     text-align: center;
-	/*margin-top:65%;*/
 	padding: 2% 0 30% 0;
 	height:5%; /* 10%*/
 }
+
 
 /************ 
 //------------------------------
@@ -167,6 +168,26 @@ div.tab button.active {
     border: 1px solid #ccc;
     border-top: none;
 } 
+.tabcontent p{
+	padding-left:10%;
+	text-align:left;
+}
+.tabcontent a{
+	float:inherit;
+	margin-right:10%;
+	padding: 7px 10px  7px  10px ;
+	text-align:center;
+	line-height:2em;
+	width:auto;
+	color:white; 
+	background-color:#007096;
+	font-family: Arial, Helvetica, sans-serif;
+	border:0; 
+	text-decoration:underline;
+	border-radius: 4px;
+	height:auto;
+}
+
 
 
 
@@ -198,7 +219,7 @@ div.tab button.active {
 }
 
 .banform form{ /*  clase banner principal con formulario*/
-	margin: 6% 10%;
+	margin: 2% 10%;
 }
 
 .destinos{
@@ -213,6 +234,85 @@ div.tab button.active {
     text-align: center;
     font-weight: 300;
 }
+
+/* Reajuste de los campos del formulario*/
+.reaj1{
+	width: 100%;
+}
+.reaj3{
+	width: 100%;
+}
+
+.r1{	
+	display: inline-block; width: auto;  /* 50% */
+}
+
+/******************
+/** Cabecera página RESULTADOS
+/**********/
+
+.cabRes{ /*  banner principal con datos resultado*/
+	height:40%; /* 100px */
+	background-color:#001625;
+}
+	.cabRes h2{
+		text-align:left;
+		padding-left:15%;
+		padding-top:3%; /* 40px*/
+		color:#FFF;
+	}
+		.cabRes p{
+		text-align:left;
+		padding-left:15%;
+		padding-top:2%; /* 40px*/
+		padding-bottom:2%;
+		color:#FFF;
+		size:10px;
+	}
+	
+/** Contenido página resultados */
+.contRes{
+	width:85%;
+	padding-left:15%;
+	/*height:80%;*/
+	background-color:#FFF;
+	float:left;
+	padding-bottom:2%;
+}
+
+
+.cImg{
+	width:235px;
+	height:209px;
+	margin-top:2%;
+	float: left;
+}
+
+.cDatos{
+	width:50%;
+	margin-top:2%;
+	text-align:left;
+	padding-left:1%;
+	background-color:#FFF;
+	float:left;
+}
+
+.cDatos a{
+	float:inherit;
+	margin-right:10%;
+	padding: 7px 10px  7px  10px ;
+	text-align:center;
+	line-height:2em;
+	width:auto;
+	color:white; 
+	background-color:#007096;
+	font-family: Arial, Helvetica, sans-serif;
+	border:0; 
+	text-decoration:underline;
+	border-radius: 4px;
+	height:auto;
+}
+
 
 /***********ORDENADOR**************/
 /************ 
@@ -421,8 +521,10 @@ nav {
     }
     #main-footer a {
         color: white;
-    }		
-	
+    }	
+	.r1{
+		width:auto;
+	}
 }
 @media (max-width: 1150px) {
 .formReg{
@@ -439,9 +541,40 @@ nav {
 	text-align:left; 
 }
 
+/* Reajuste delos campos del formulario*/
+.reaj1{ /* texto */
+	width: 100%;
+}
+.reaj3{ /* pers/hab */
+	width: 100%;
+}
+
 }
 
 @media (max-width: 768px) { /* móvil */
+.cabRes{ /*  banner principal con datos resultado*/
+	height:80%;
+	background-color:#001625;
+}
+
+	.cabRes h2{
+		text-align:left;
+		padding-left:15%;
+		padding-top:4%; /* 40px*/
+		color:#FFF;
+	}
+		.cabRes p{
+		text-align:left;
+		padding-left:15%;
+		padding-top:3%; /* 40px*/
+		color:#FFF;
+		size:10px;
+	}
+
+
+
+
+
 .formReg{
 	background-color:lightblue;
 	float:left;
@@ -560,6 +693,14 @@ nav {
     #main-footer a {
         color: white;
     }
+	
+	/* Reajuste delos campos del formulario*/
+	.reaj1{ /* texto */
+		width:100%;
+	}
+	.reaj3{ /* pers/hab */
+		width: 100%;
+	}
 				
 }	
 @media (max-width: 600px) { /* móvil */
@@ -691,6 +832,7 @@ h2 {
     text-align: center;
     font-weight: 10;
 }
+
 .colum2 p{
 	font-size: 1em;
     line-height: 1.3em;
@@ -718,6 +860,9 @@ h2 {
         color: white;
     }
 
+.r1{
+	width:100%;	
+}
 
 }	
 @media (max-width: 480px) { /* móvil */
@@ -732,7 +877,8 @@ h2 {
 }	
 .formLog{
 	margin:0 1% 5% 15%;
-	text-align:left; 
+	text-align:left;
+	color:#333; 
 }
 .bLog{ /* Registro*/
  	width: 150px;
